--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,23 @@
 asgiref==3.8.1
-Django==5.0.7
+certifi==2024.8.30
+charset-normalizer==3.3.2
+Django==4.1.13
 django-appconf==1.0.6
 django-compressor==4.5.1
 django-libsass==0.9
 django-sass-processor==1.4.1
 django-widget-tweaks==1.5.0
+djongo==1.3.6
+dnspython==2.6.1
+idna==3.10
 libsass==0.23.0
+mongoengine==0.29.1
+psycopg2-binary==2.9.9
+pymongo==4.9.1
+python-dotenv==1.0.1
 rcssmin==1.1.2
+requests==2.32.3
 rjsmin==1.2.2
-sqlparse==0.5.1
+sqlparse==0.2.4
 typing_extensions==4.12.2
+urllib3==2.2.3
