Add user management

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,11 @@
 __pycache__
 db.sqlite3
 media
-.zono/
+.zono/settings
+zono/settings.py
 # Backup files # 
 *.bak 
-
+./callbot
 # If you are using PyCharm # 
 # User-specific stuff
 .idea/**/workspace.xml
