--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,33 @@
 asgiref==3.8.1
+boto3==1.35.51
+botocore==1.35.51
 certifi==2024.8.30
 charset-normalizer==3.3.2
-Django==4.1.13
+Django==5.1.2
 django-appconf==1.0.6
 django-compressor==4.5.1
 django-libsass==0.9
 django-sass-processor==1.4.1
 django-widget-tweaks==1.5.0
-djongo==1.3.6
+psycopg2-binary
 dnspython==2.6.1
 idna==3.10
+jmespath==1.0.1
 libsass==0.23.0
 mongoengine==0.29.1
-psycopg2-binary==2.9.9
+numpy==2.1.2
+pandas==2.2.3
 pymongo==4.9.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
 rcssmin==1.1.2
 requests==2.32.3
 rjsmin==1.2.2
-sqlparse==0.2.4
+s3transfer==0.10.3
+six==1.16.0
+sqlparse==0.5.1
 typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.2.3
+gunicorn
