--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,6 +118,8 @@ services:
       - SECRET_KEY=${SECRET_KEY}
       - EMAIL_HOST_USER=${EMAIL_HOST_USER}
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
+      - STRIPE_PUBLISHABLE_KEY={STRIPE_PUBLISHABLE_KEY}
+      - STRIPE_SECRET_KEY={STRIPE_SECRET_KEY}
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
