--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+stripe
 boto3==1.35.51
 botocore==1.35.51
 certifi==2024.8.30
@@ -31,3 +32,4 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 gunicorn
+python-decouple
